--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "hchs-vue-charts": "^1.2.8",
     "serve-static": "^1.14.1",
     "v-mask": "^2.2.1",
     "v-money": "^0.8.1",
